# language-model-evaluation

./: .gitignore  README.md  clean_dataset.py  combine_datasets.py  compress_lm.sh  compute_tfidf_similarity.py  estimate_kenlm.sh  evaluate_hf_kenlm.sh  evaluate_hf_kenlm_multiple.sh  evaluate_language_model.py  evaluate_language_model_multiple.py  evaluate_w2v2.py  extract_unigrams.sh  extract_unigrams_from_arpa.py  generate_hypothesis.py  pyproject.toml
asr_language_model_evaluation/datasets/: __init__.py  brwac.py  ceten_folha.py  cetuc.py  common_voice.py  coraa.py  dataset.py  mls.py  wikipedia.py
asr_language_model_evaluation/preprocessing/: __init__.py  num2words_wrapper.py  preprocess.py
tests/: test_asr_language_model_evaluation.py  test_preprocess.py
