[tool.poetry]
name = "asr_language_model_evaluation"
version = "0.1.0"
description = ""
authors = ["Joao Paulo Reis Alvarenga <joaopaulo.reisalvarenga@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
num2words = "^0.5.10"
datasets = "^1.18.2"
pandas = "<4.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
